# som-refusal-directions

./: .gitignore  ablate.py  config.py  create_representation_dataset.py  eval_jailbreaks.py  optuna_search.py  pyproject.toml  som.py  som_generate_directions.py
models/: language_models.py  load_models.py
utils/: __init__.py  ablation_utils.py  select_layer.py
