[project]
name = "som-refusal-directions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets==3.3.2",
    "fastchat==0.1.0",
    "huggingface-hub>=0.30.0",
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "openai>=1.99.1",
    "pandas==2.2.3",
    "plotly==6.0.1",
    "scikit-learn==1.6.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "minisom==2.3.5",
    "psutil==7.0.0",
    "accelerate==1.5.2",
    "jaxtyping==0.3.0",
    "einops==0.8.1",
    "ax-platform==0.4.0",
    "transformers-stream-generator==0.0.5",
    "seaborn==0.12.2",
    "bitsandbytes",
    "vllm>=0.14.0",
    "optuna",
    "torch",
    "hf_transfer",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
